src/Home.scss
$font-size: 75px;
$primary-color: #4cad50;

* {
  transition: all 1s ease;
}

*::selection {
  background: rgba(255, 255, 255, 0.2);
  color: $primary-color;
}

.container {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 670px;
  height: 125px;

  @media (max-width: 670px) {
    width: 100%;
    height: 200px;
  }
}

.icon {
  margin: 0;
  padding: 0;
  line-height: 1.5 * $font-size;
  font-size: $font-size;
  display: inline-block;
  color: $primary-color;
  opacity: 0.30;
  float: left;
  user-select: none;
  cursor: default;

  @media (max-width: 670px) {
    width: 100%;
    text-align: center;
  }

  .brace {
    padding: 0 (0.15 * $font-size);
    color: rgba(252, 252, 252, 1);
    font-size: 1.5 * $font-size;
    opacity: 0.20;
    font-weight: bold;
    display: inline-block;
  }
}

.text {
  margin-top: 20px;
  display: inline-block;
  color: white;
  float: left;

  .top {
    font-size: 13px;

    @media (max-width: 670px) {
      font-size: 11px;
    }

    .primary-color {
      color: rgba(76, 173, 80, 0.4); // $primary-color
    }

    span:not(.primary-color) {
      color: rgba(252, 252, 252, 0.2);
    }
  }

  @media (max-width: 670px) {
    margin-top: 0;
    width: 100%;
    text-align: center;
  }

  h1 {
    letter-spacing: 5px;
    margin: 0;
    font-size: 45px;

    @media (max-width: 670px) {
      font-size: 35px;
    }
  }
}

.personal-links {
  font-family: 'Source Code Pro', monospace;
  margin-top: 10px;
  line-height: 11px;
  letter-spacing: 0.5px;

  a {
    margin-right: 15px;
  }
}

a {
  position: relative;
  font-size: 11px;
  line-height: 15px;
  color: white;
  text-decoration: none;

  &::before {
    transform: scaleX(0);
    content: "";
    width: 100%;
    position: absolute;
    bottom: -5px;
    left: 0;
    border-bottom: solid 1px;
    border-color: $primary-color;
    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
  }

  &:hover::before {
    transform: scaleX(1);
  }
}

.labs-link {
  position: absolute;
  top: 15px;
  right: 15px;

  a {
    color: white;
    text-decoration: none;
    opacity: 0.3;

    &:hover {
      opacity: 0.75;
    }
  }
}

